01_resources/01_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: application
  labels:
    app: application
spec:
  replicas: 1
  selector:
    matchLabels:
      app: application
  template:
    metadata:
      labels:
        app: application
    spec:
      containers:
        - name: application
          image: ueber/application:1.0.0
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080 
              protocol: TCP
