01_resources/02_service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: application
  labels:
    app: application
spec:
  selector:
    app: application
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
